recipes-setup/gnss-station/files/rules.v4
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:DROPLOG - [0:0]
:OKLOG - [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -s 10.0.0.0/8 -j ACCEPT
-A INPUT -s 172.16.0.0/12 -j ACCEPT
-A INPUT -s 192.168.0.0/16 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 10001:10005 -j OKLOG
-A DROPLOG -m limit --limit 2/min -j LOG --log-prefix "FW-Drop:"
-A DROPLOG -j DROP
-A OKLOG -m limit --limit 2/min -j LOG --log-prefix "FW-Accept:"
-A OKLOG -j ACCEPT
COMMIT
